Threaded/atomic input working, no tests yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ find_package(Curses REQUIRED)
 
 add_executable(tetris src/main.c
                       src/game/game.c
-                      src/tetrimino/gravity.c
+                      src/game/input.c
                       src/tetrimino/movement.c
+                      src/tetrimino/movedown.c
                       src/tetrimino/moveleft.c
                       src/tetrimino/moveright.c
                       src/tetrimino/validation.c
@@ -29,35 +30,33 @@ target_link_libraries(tetris ${CURSES_LIBRARIES})
 
 # UNIT TESTING
 
-add_executable(tetris_tests tests/tests.c
-                            tests/unity/unity.c
-                            tests/randombag/randombag.c
-                            tests/playfield/spawntetrimino.c
-                            tests/playfield/gameover.c
-                            tests/tetrimino/gravity.c
-                            tests/tetrimino/moveleft.c
-                            tests/tetrimino/moveright.c
-                            tests/utilities/utilities.c
-                            src/game/game.c
-                            src/ui/ui.c
-                            src/tetrimino/gravity.c
-                            src/tetrimino/movement.c
-                            src/tetrimino/moveleft.c
-                            src/tetrimino/moveright.c
-                            src/tetrimino/validation.c
-)
-
-target_compile_definitions(tetris_tests PRIVATE UNIT_TEST)
-
-target_include_directories(tetris_tests PRIVATE tests/unity
-                                                tests/randombag
-                                                tests/playfield
-                                                tests/tetrimino
-                                                tests/utilities
-                                                src/game
-                                                src/tetrimino
-                                                src/ui
-)
-
-target_link_libraries(tetris_tests ${CURSES_LIBRARIES})
-
+# add_executable(tetris_tests tests/tests.c
+# tests/unity/unity.c
+# tests/randombag/randombag.c
+# tests/playfield/spawntetrimino.c
+# tests/playfield/gameover.c
+# tests/tetrimino/moveleft.c
+# tests/tetrimino/moveright.c
+# tests/utilities/utilities.c
+# src/game/game.c
+# src/ui/ui.c
+# src/tetrimino/movement.c
+# src/tetrimino/moveleft.c
+# src/tetrimino/moveright.c
+# src/tetrimino/validation.c
+# )
+# 
+# target_compile_definitions(tetris_tests PRIVATE UNIT_TEST)
+# 
+# target_include_directories(tetris_tests PRIVATE tests/unity
+# tests/randombag
+# tests/playfield
+# tests/tetrimino
+# tests/utilities
+# src/game
+# src/tetrimino
+# src/ui
+# )
+# 
+# target_link_libraries(tetris_tests ${CURSES_LIBRARIES})
+# 
