Update tetrimino placement tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,16 +4,29 @@ find_package(Curses REQUIRED)
 
 add_executable(tetris_tests)
 
+target_compile_definitions(tetris_tests PRIVATE UNIT_TEST)
+
+target_compile_options(tetris_tests PRIVATE
+    -O0
+    -g3
+    -fsanitize=address
+)
+
 # Test source files.
 target_sources(tetris_tests PRIVATE
     tests.c
     unity/unity.c
     randombag/randombag.c
-    # tests/playfield/spawntetrimino.c
-    # tests/playfield/gameover.c
-    # tests/tetrimino/moveleft.c
-    # tests/tetrimino/moveright.c
-    # tests/utilities/utilities.c
+    placement/placement.c
+    utilities/utilities.c
+)
+
+target_include_directories(tetris_tests PRIVATE
+    unity
+    randombag
+    placement
+    tetrimino
+    utilities
 )
 
 # Game source files.
@@ -28,27 +41,13 @@ target_sources(tetris_tests PRIVATE
     ${CMAKE_SOURCE_DIR}/src/tetrimino/rotation.c
 )
 
-target_compile_options(tetris_tests PRIVATE
-    -O0
-    -g3
-    -fsanitize=address
-)
-
-target_link_options(tetris_tests PRIVATE -fsanitize=address)
-
-target_compile_definitions(tetris_tests PRIVATE UNIT_TEST)
-
 target_include_directories(tetris_tests PRIVATE
-    tests/unity
-    tests/randombag
-    tests/playfield
-    tests/tetrimino
-    tests/utilities
     ${CMAKE_SOURCE_DIR}/src/game
     ${CMAKE_SOURCE_DIR}/src/tetrimino
     ${CMAKE_SOURCE_DIR}/src/ui
 )
 
+target_link_options(tetris_tests PRIVATE -fsanitize=address)
 target_link_libraries(tetris_tests PRIVATE ${CURSES_LIBRARIES})
 
 add_test("Tetris Unit Tests" tetris_tests)
